fix banner img on mobile

--- a/src/components/TopTenCards/TopTenCards.css
+++ b/src/components/TopTenCards/TopTenCards.css
@@ -1,5 +1,6 @@
 .topten-section {
   margin-top: 40px;
+  margin-bottom: -25px;
 }
 
 .topten-section h2 {
